PUG-247: Updates module partner domain staff;