@@ -1,29 +1,34 @@
 package br.org.catolicasc.pug.partner.presenter;
 
+import br.org.catolicasc.pug.identity.presenter.dtos.AccountStatusRequest;
 import br.org.catolicasc.pug.identity.service.AuthService;
-import br.org.catolicasc.pug.identity.service.PasswordService;
 import br.org.catolicasc.pug.partner.constants.PartnerApiPaths;
 import br.org.catolicasc.pug.partner.domain.Staff;
 import br.org.catolicasc.pug.partner.infra.read.dtos.StaffView;
+import br.org.catolicasc.pug.partner.presenter.dtos.StaffComplexSearchRequest;
 import br.org.catolicasc.pug.partner.presenter.dtos.StaffCreateRequest;
 import br.org.catolicasc.pug.partner.presenter.dtos.StaffResponse;
 import br.org.catolicasc.pug.partner.presenter.dtos.StaffUpdateRequest;
 import br.org.catolicasc.pug.partner.presenter.mappers.StaffPresenter;
 import br.org.catolicasc.pug.partner.service.StaffReadService;
 import br.org.catolicasc.pug.partner.service.StaffService;
-import br.org.catolicasc.pug.shared.exceptions.ResourceNotFoundException;
+import br.org.catolicasc.pug.partner.service.dtos.StaffComplexSearchCriteria;
 import br.org.catolicasc.pug.shared.i18n.I18n;
+import br.org.catolicasc.pug.shared.presenter.dtos.PageResponse;
 import br.org.catolicasc.pug.shared.presenter.rest.ApiEnvelope;
+import br.org.catolicasc.pug.shared.service.dtos.PageQuery;
+import br.org.catolicasc.pug.shared.utils.CollectionUtils;
 import br.org.catolicasc.pug.shared.utils.PresenterUtils;
-import br.org.catolicasc.pug.shared.utils.StringUtils;
 import br.org.catolicasc.pug.shared.validation.UuidV7;
 import io.quarkus.security.Authenticated;
 import jakarta.annotation.security.RolesAllowed;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Min;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.DELETE;
+import jakarta.ws.rs.DefaultValue;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.PATCH;
 import jakarta.ws.rs.POST;
@@ -41,15 +46,8 @@ import java.net.URI;
 import java.util.List;
 import java.util.Locale;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-/**
- * REST API Resource controller for managing Partner Staff privileges.
- *
- * <p>This class exposes endpoints to assign, retrieve, update, and revoke organizational roles for
- * authentication accounts. It acts as the HTTP entry point, delegating queries to the {@link
- * StaffReadService} and commands to the {@link StaffService}, adhering to CQRS principles.
- */
+/** REST API resource controller for managing Partner Staff privileges. */
 @ApplicationScoped
 @Path(PartnerApiPaths.STAFF)
 @Consumes(MediaType.APPLICATION_JSON)
@@ -58,24 +56,12 @@ public class StaffResource {
 
   @Inject StaffService writeService;
   @Inject StaffReadService readService;
-  @Inject PasswordService passwordService;
   @Inject AuthService authService;
   @Inject I18n i18n;
 
   @Context UriInfo uri;
   @Context HttpHeaders headers;
 
-  /**
-   * Retrieves a specific staff member by their linked account ID.
-   *
-   * <p>Available to any authenticated user so that students can see which staff members they will
-   * work with.
-   *
-   * @param id the unique identifier (UUIDv7) of the staff member's account
-   * @return an HTTP 200 OK response containing an {@link ApiEnvelope} with the {@link
-   *     StaffResponse}
-   * @throws ResourceNotFoundException if the staff assignment is not found
-   */
   @GET
   @Path("/{id}")
   @Authenticated
@@ -85,18 +71,6 @@ public class StaffResource {
     return Response.ok(ApiEnvelope.ok(body)).build();
   }
 
-  /**
-   * Retrieves the staff profile details of the currently authenticated user.
-   *
-   * <p>The account identifier is resolved from the JWT {@code accountId} claim via {@link
-   * AuthService}, ensuring that staff members can only request their own staff profile. Restricted
-   * to users with the STAFF role.
-   *
-   * @return an HTTP 200 OK response containing an {@link ApiEnvelope} with the {@link
-   *     StaffResponse}
-   * @throws jakarta.ws.rs.NotAuthorizedException if the token is missing, invalid, or does not
-   *     contain the required {@code accountId} claim
-   */
   @GET
   @Path("/me")
   @Authenticated
@@ -107,127 +81,79 @@ public class StaffResource {
     return Response.ok(ApiEnvelope.ok(body)).build();
   }
 
-  /**
-   * Retrieves staff members, optionally filtered by query parameters.
-   *
-   * <p>When {@code email} is provided, this endpoint returns the staff member linked to that
-   * account email. When {@code cpf} is provided, it returns the staff members associated with that
-   * CPF. When {@code entityId} is provided, it returns the staff assigned to that partner entity.
-   * If none of those filters are supplied, it falls back to name-based search with {@code q} or
-   * lists all staff members.
-   *
-   * @param query the optional search query string
-   * @param emailRaw the optional email used to retrieve a single staff member
-   * @param cpfRaw the optional CPF used to retrieve the staff members associated with a user
-   * @param entityId the optional partner entity identifier used to filter staff members
-   * @return an HTTP 200 OK response containing an {@link ApiEnvelope} with either a single {@link
-   *     StaffResponse} or a list of {@link StaffResponse}
-   */
+  /** Retrieves staff members, optionally filtered by a collection of linked account identifiers. */
   @GET
   @Authenticated
-  public Response list(
-      @QueryParam("q") String query,
-      @QueryParam("email") String emailRaw,
-      @QueryParam("cpf") String cpfRaw,
-      @QueryParam("entityId") @UuidV7 UUID entityId) {
-    if (StringUtils.isNotEmpty(emailRaw)) {
-      StaffView v = readService.getViewByEmail(emailRaw);
-      StaffResponse out = StaffPresenter.toResponse(v, locale(), i18n);
-      return Response.ok(ApiEnvelope.ok(out)).build();
-    }
-
-    if (StringUtils.isNotEmpty(cpfRaw)) {
-      List<StaffResponse> list =
-          readService.listViewsByCpf(cpfRaw).stream()
-              .map(v -> StaffPresenter.toResponse(v, locale(), i18n))
-              .collect(Collectors.toList());
-      return Response.ok(ApiEnvelope.ok(list)).build();
-    }
-
-    if (entityId != null) {
-      List<StaffResponse> list =
-          readService.listViewsByEntityId(entityId).stream()
-              .map(v -> StaffPresenter.toResponse(v, locale(), i18n))
-              .collect(Collectors.toList());
-      return Response.ok(ApiEnvelope.ok(list)).build();
-    }
-
+  public Response list(@QueryParam("ids") List<UUID> ids) {
     List<StaffView> views =
-        StringUtils.isNotEmpty(query) ? readService.search(query) : readService.listViews();
-
+        CollectionUtils.isEmpty(ids) ? readService.listViews() : readService.listViewsByIds(ids);
     List<StaffResponse> list =
-        views.stream()
-            .map(v -> StaffPresenter.toResponse(v, locale(), i18n))
-            .collect(Collectors.toList());
-
+        views.stream().map(v -> StaffPresenter.toResponse(v, locale(), i18n)).toList();
     return Response.ok(ApiEnvelope.ok(list)).build();
   }
 
-  /**
-   * Registers a new staff member and assigns them to a partner organization.
-   *
-   * <p>Restricted to ADMIN and STAFF roles.
-   */
+  /** Executes paginated staff search using the complex-search contract. */
+  @POST
+  @Path("/search")
+  @Authenticated
+  public Response search(
+      @QueryParam("page") @DefaultValue("0") @Min(0) int page,
+      @QueryParam("size") @DefaultValue("25") @Min(1) int size,
+      @Valid StaffComplexSearchRequest request) {
+    StaffComplexSearchCriteria criteria =
+        request == null
+            ? new StaffComplexSearchCriteria(null, null, null, null, null, true, null)
+            : new StaffComplexSearchCriteria(
+                request.name(),
+                request.cpf(),
+                request.email(),
+                request.dateFrom(),
+                request.dateTo(),
+                request.activeOnly() == null || request.activeOnly(),
+                request.entityIds());
+
+    var result = readService.search(new PageQuery(page, size), criteria);
+    var responseBody =
+        new PageResponse<>(
+            result.content().stream()
+                .map(v -> StaffPresenter.toComplexSearchResponse(v, locale(), i18n))
+                .toList(),
+            result.page(),
+            result.size(),
+            result.totalElements(),
+            result.totalPages());
+
+    return Response.ok(ApiEnvelope.ok(responseBody)).build();
+  }
+
   @POST
   @RolesAllowed({"ADMIN", "STAFF"})
   public Response create(@Valid StaffCreateRequest req) {
-    String hashedPassword = passwordService.hash(req.password());
-    var cmd = StaffPresenter.toCommand(req, hashedPassword);
-    Staff staff = writeService.save(cmd);
-
+    Staff staff = writeService.save(StaffPresenter.toCommand(req));
     StaffView v = readService.getViewByAccountId(staff.getAccountId());
     StaffResponse out = StaffPresenter.toResponse(v, locale(), i18n);
     URI location = uri.getAbsolutePathBuilder().path(staff.getAccountId().toString()).build();
-
     return Response.created(location).entity(ApiEnvelope.created(out)).build();
   }
 
-  /**
-   * Partially updates a staff member's account and personal details.
-   *
-   * <p>Restricted to ADMIN and STAFF roles.
-   */
   @PUT
   @Path("/{id}")
   @RolesAllowed({"ADMIN", "STAFF"})
   public Response update(@PathParam("id") @UuidV7 UUID id, @Valid StaffUpdateRequest req) {
-    String hashedPassword = req.password() != null ? passwordService.hash(req.password()) : null;
-    var cmd = StaffPresenter.toCommand(req, hashedPassword);
-    writeService.update(id, cmd);
-
-    StaffView v = readService.getViewByAccountId(id);
+    Staff updated = writeService.update(id, StaffPresenter.toCommand(req));
+    StaffView v = readService.getViewByAccountId(updated.getAccountId());
     StaffResponse body = StaffPresenter.toResponse(v, locale(), i18n);
-
     return Response.ok(ApiEnvelope.ok(body)).build();
   }
 
-  /**
-   * Applies a partial update to a staff member.
-   *
-   * <p>This endpoint supports the same partial payload semantics as {@link #update(UUID,
-   * StaffUpdateRequest)} and is also used for activation-state changes, such as setting {@code
-   * active} to {@code false} to deactivate the account.
-   *
-   * @param id the unique identifier (UUIDv7) of the staff member's account
-   * @param req the validated {@link StaffUpdateRequest} containing the fields to change
-   * @return an HTTP 204 No Content response when the update succeeds
-   * @throws ResourceNotFoundException if the staff assignment is not found
-   */
   @PATCH
-  @Path("/{id}")
+  @Path("/{id}/status")
   @RolesAllowed({"ADMIN", "STAFF"})
-  public Response patch(@PathParam("id") @UuidV7 UUID id, @Valid StaffUpdateRequest req) {
-    String hashedPassword = req.password() != null ? passwordService.hash(req.password()) : null;
-    var cmd = StaffPresenter.toCommand(req, hashedPassword);
-    writeService.update(id, cmd);
+  public Response updateStatus(@PathParam("id") @UuidV7 UUID id, @Valid AccountStatusRequest req) {
+    writeService.updateStatus(id, req.active());
     return Response.noContent().build();
   }
 
-  /**
-   * Permanently removes a staff member and their underlying account from the system.
-   *
-   * <p>Restricted to ADMIN role only.
-   */
   @DELETE
   @Path("/{id}")
   @RolesAllowed("ADMIN")
